[package]

name = "stash"
keywords = ["data-structures"]
version = "0.1.0"
authors = ["Steven Allen <steven@stebalien.com>"]

homepage = "https://github.com/Stebalien/stash-rs"
repository = "https://github.com/Stebalien/stash-rs"
documentation = "https://stebalien.github.io/stash-rs/stash/"
readme = "README.md"

license = "MIT/Apache-2.0"
description="An amortized `O(1)` table for cases where you don't need to choose the keys and want something faster than a HashTable."

[dependencies]
unreachable = "0.1.1"
